- Fixed AngularJS issues with variable scoping in discover.ts, now filtering and authentication popup work again. - Fixed missing static resources for icons - Added vendor (such as camel) - Fixed broken UI in the discovery list - Removed legacy code in UI to support outdated version of Jolokia (breaking change here, however things were not working great before either). - JVM command will now always be looked up alongside with timings. Unclear why there was an inconsistency here before.

--- a/plugins/jvm/less/jvm.less
+++ b/plugins/jvm/less/jvm.less
@@ -51,7 +51,7 @@ div[ng-controller="JVM.DiscoveryController"] ul.discovery .remoteAgent {
     height: 190px;
     float: left;
     border-left: 1px solid #bbb;
-    padding: 0px 0px 10px 20px;
+    padding: 0 0 10px 20px;
 
     .action-group {
       margin-top: 10px;
@@ -62,7 +62,7 @@ div[ng-controller="JVM.DiscoveryController"] ul.discovery .remoteAgent {
     float: left;
     clear: none;
     &.logo {
-      margin: 20px 20px 0px 0px;
+      margin: 20px 20px 0 0;
       width: 135px;
       background-repeat: no-repeat;
       background-size: 85px 85px;
